--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "license": "MIT",
   "author": "maxwellium",
+  "repository": "github:maxwellium/jwt-hs256",
   "keywords": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
