--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "repository": "github:maxwellium/jwt-hs256",
   "keywords": [],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node -e 'const { run } = require(\"./build/test\"); run();'",
     "compile": "tsc -p ."
   },
   "devDependencies": {
