--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "jwt-hs256",
   "version": "2.0.0",
   "description": "",
-  "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
+  "main": "./build/src/index.js",
+  "types": "./build/src/index.d.ts",
+  "exports": {
+    ".": "./build/src/index.js",
+    "./base64url.js": "./build/src/base64url.js"
+  },
   "files": [
-    "build/src"
+    "./build/src"
   ],
   "type": "module",
   "license": "MIT",
@@ -13,11 +17,11 @@
   "repository": "github:maxwellium/jwt-hs256",
   "keywords": [],
   "scripts": {
-    "test": "node --es-module-specifier-resolution=node ./build/test",
+    "test": "node --es-module-specifier-resolution=node ./build/test/test.js",
     "compile": "tsc -p ."
   },
   "devDependencies": {
-    "@types/node": "^12.12.20",
-    "typescript": "^3.7.3"
+    "@types/node": "^16.3.3",
+    "typescript": "^4.3.5"
   }
 }
