--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,29 @@
 {
   "compilerOptions": {
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
     "lib": [
-      "es2019"
+      "es2020",
     ],
-    "module": "esnext",
+    "module": "es2020",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "pretty": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2019",
+    "target": "es2020",
     "rootDir": ".",
-    "outDir": "build"
+    "outDir": "build",
+    "moduleResolution": "node"
   },
   "include": [
     "src/*.ts",
+    "src/**/*.ts",
     "test/*.ts",
+    "test/**/*.ts"
   ],
   "exclude": [
     "node_modules"
