--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "jwt-hs256",
   "version": "3.0.0",
   "description": "",
-  "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./build/src/index.d.ts",
+      "import": "./build/src/index.js"
+    }
+  },
   "files": [
     "build/src"
   ],
@@ -13,14 +17,11 @@
   "repository": "github:maxwellium/jwt-hs256",
   "keywords": [],
   "scripts": {
-    "test": "node --es-module-specifier-resolution=node ./build/test/test.js",
+    "test": "node ./build/test/index.test.js",
     "build": "tsc -p ."
   },
   "devDependencies": {
-    "@types/node": "^16.9.1",
-    "typescript": "^4.4.3"
-  },
-  "engines": {
-    "node": ">=15.7"
+    "@types/node": "^20.11.25",
+    "typescript": "^5.4.2"
   }
 }
